--- a/Draw/Controller/Feed/FeedDetail/ShowFeedController.xib
+++ b/Draw/Controller/Feed/FeedDetail/ShowFeedController.xib
@@ -260,7 +260,7 @@ AAgACAAIAAEAAQABAAE</bytes>
 					</object>
 					<object class="IBUIButton" id="33311402">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">301</int>
 						<string key="NSFrame">{{142, 422}, {36, 36}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
@@ -280,7 +280,7 @@ AAgACAAIAAEAAQABAAE</bytes>
 						<reference key="IBUINormalTitleShadowColor" ref="378313143"/>
 						<object class="NSCustomResource" key="IBUINormalImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">reply@2x.png</string>
+							<string key="NSResourceName">detail_save@2x.png</string>
 						</object>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">2</int>
@@ -294,7 +294,7 @@ AAgACAAIAAEAAQABAAE</bytes>
 					</object>
 					<object class="IBUIButton" id="470753644">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">301</int>
 						<string key="NSFrame">{{81, 422}, {36, 36}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
@@ -314,15 +314,15 @@ AAgACAAIAAEAAQABAAE</bytes>
 						<reference key="IBUINormalTitleShadowColor" ref="378313143"/>
 						<object class="NSCustomResource" key="IBUINormalImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">save@2x.png</string>
+							<string key="NSResourceName">detail_comment@2x.png</string>
 						</object>
 						<reference key="IBUIFontDescription" ref="326453671"/>
 						<reference key="IBUIFont" ref="823780608"/>
 					</object>
 					<object class="IBUIButton" id="608461199">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{203, 422}, {36, 36}}</string>
+						<int key="NSvFlags">301</int>
+						<string key="NSFrame">{{203, 421}, {38, 38}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="789324363"/>
@@ -341,7 +341,7 @@ AAgACAAIAAEAAQABAAE</bytes>
 						<reference key="IBUINormalTitleShadowColor" ref="378313143"/>
 						<object class="NSCustomResource" key="IBUINormalImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">flower@2x.png</string>
+							<string key="NSResourceName">detail_flower@2x.png</string>
 						</object>
 						<object class="IBUIFontDescription" key="IBUIFontDescription" id="824289444">
 							<int key="type">2</int>
@@ -355,11 +355,10 @@ AAgACAAIAAEAAQABAAE</bytes>
 					</object>
 					<object class="IBUIButton" id="789324363">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{264, 422}, {36, 36}}</string>
+						<int key="NSvFlags">301</int>
+						<string key="NSFrame">{{264, 421}, {38, 38}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUITag">104</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -375,14 +374,14 @@ AAgACAAIAAEAAQABAAE</bytes>
 						<reference key="IBUINormalTitleShadowColor" ref="378313143"/>
 						<object class="NSCustomResource" key="IBUINormalImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">tomato@2x.png</string>
+							<string key="NSResourceName">detail_tomato@2x.png</string>
 						</object>
 						<reference key="IBUIFontDescription" ref="824289444"/>
 						<reference key="IBUIFont" ref="539193566"/>
 					</object>
 					<object class="IBUIButton" id="535934834">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">301</int>
 						<string key="NSFrame">{{20, 422}, {36, 36}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
@@ -402,7 +401,7 @@ AAgACAAIAAEAAQABAAE</bytes>
 						<reference key="IBUINormalTitleShadowColor" ref="378313143"/>
 						<object class="NSCustomResource" key="IBUINormalImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">h_guess@2x.png</string>
+							<string key="NSResourceName">detail_guess@2x.png</string>
 						</object>
 						<reference key="IBUIFontDescription" ref="326453671"/>
 						<reference key="IBUIFont" ref="823780608"/>
@@ -616,11 +615,11 @@ AAgACAAIAAEAAQABAAE</bytes>
 							<reference ref="150974079"/>
 							<reference ref="535934834"/>
 							<reference ref="789324363"/>
-							<reference ref="608461199"/>
 							<reference ref="470753644"/>
 							<reference ref="33311402"/>
 							<reference ref="604703104"/>
 							<reference ref="943438689"/>
+							<reference ref="608461199"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -834,15 +833,15 @@ AAgACAAIAAEAAQABAAE</bytes>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="back@2x.png">{74, 74}</string>
 			<string key="bottom_menubg@2x.png">{640, 86}</string>
-			<string key="flower@2x.png">{122, 122}</string>
-			<string key="h_guess@2x.png">{134, 134}</string>
+			<string key="detail_comment@2x.png">{72, 72}</string>
+			<string key="detail_flower@2x.png">{72, 72}</string>
+			<string key="detail_guess@2x.png">{72, 72}</string>
+			<string key="detail_save@2x.png">{72, 72}</string>
+			<string key="detail_tomato@2x.png">{72, 72}</string>
 			<string key="light_yellow_bg@2x.png">{640, 960}</string>
 			<string key="paper@2x.png">{640, 960}</string>
 			<string key="paperclip@2x.png">{388, 79}</string>
 			<string key="refresh@2x.png">{74, 74}</string>
-			<string key="reply@2x.png">{72, 72}</string>
-			<string key="save@2x.png">{72, 72}</string>
-			<string key="tomato@2x.png">{122, 122}</string>
 			<string key="topwood@2x.png">{640, 99}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">933</string>
