--- a/Draw/Controller/Feed/FeedDetail/DrawInfoCell~ipad.xib
+++ b/Draw/Controller/Feed/FeedDetail/DrawInfoCell~ipad.xib
@@ -11,6 +11,7 @@
 			<string key="NS.object.0">933</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
+			<string>IBUIImageView</string>
 			<string>IBUITableViewCell</string>
 			<string>IBUIActivityIndicatorView</string>
 			<string>IBUILabel</string>
@@ -41,6 +42,20 @@
 						<reference key="NSNextResponder" ref="893510759"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
+							<object class="IBUIImageView" id="1001909156">
+								<reference key="NSNextResponder" ref="765286161"/>
+								<int key="NSvFlags">301</int>
+								<string key="NSFrame">{{30, 15}, {665, 700}}</string>
+								<reference key="NSSuperview" ref="765286161"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="210089552"/>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">unloadbg.png</string>
+								</object>
+							</object>
 							<object class="IBUIView" id="210089552">
 								<reference key="NSNextResponder" ref="765286161"/>
 								<int key="NSvFlags">301</int>
@@ -108,7 +123,7 @@
 						<string key="NSFrameSize">{724, 749}</string>
 						<reference key="NSSuperview" ref="893510759"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="210089552"/>
+						<reference key="NSNextKeyView" ref="1001909156"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
@@ -182,6 +197,7 @@
 							<reference ref="872528613"/>
 							<reference ref="1073126218"/>
 							<reference ref="210089552"/>
+							<reference ref="1001909156"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -198,6 +214,12 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
 						<reference key="object" ref="210089552"/>
+						<array class="NSMutableArray" key="children"/>
+						<reference key="parent" ref="893510759"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">16</int>
+						<reference key="object" ref="1001909156"/>
 						<reference key="parent" ref="893510759"/>
 					</object>
 				</array>
@@ -209,6 +231,7 @@
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="14.CustomClassName">HJManagedImageV</string>
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="16.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.CustomClassName">DrawInfoCell</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -218,7 +241,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">15</int>
+			<int key="maxID">16</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -271,6 +294,10 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
+		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="NS.key.0">unloadbg.png</string>
+			<string key="NS.object.0">{175, 170}</string>
+		</object>
 		<string key="IBCocoaTouchPluginVersion">933</string>
 	</data>
 </archive>
