--- a/Draw/Dice/View/PopupView/ChatView.xib
+++ b/Draw/Dice/View/PopupView/ChatView.xib
@@ -11,12 +11,13 @@
 			<string key="NS.object.0">1181</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
-			<string>IBUIButton</string>
-			<string>IBUITableView</string>
-			<string>IBUIImageView</string>
 			<string>IBUIView</string>
-			<string>IBUIScrollView</string>
+			<string>IBUIImageView</string>
 			<string>IBProxyObject</string>
+			<string>IBUITableView</string>
+			<string>IBUIPageControl</string>
+			<string>IBUIScrollView</string>
+			<string>IBUIButton</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -41,7 +42,7 @@
 					<object class="IBUIImageView" id="60567703">
 						<reference key="NSNextResponder" ref="1009307457"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{10, 11}, {243, 265}}</string>
+						<string key="NSFrame">{{10, 9}, {243, 274}}</string>
 						<reference key="NSSuperview" ref="1009307457"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1009680257"/>
@@ -52,10 +53,10 @@
 					<object class="IBUIScrollView" id="1009680257">
 						<reference key="NSNextResponder" ref="1009307457"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{21, 19}, {222, 35}}</string>
+						<string key="NSFrame">{{21, 26}, {222, 35}}</string>
 						<reference key="NSSuperview" ref="1009307457"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="381758895"/>
+						<reference key="NSNextKeyView" ref="501979713"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="800991718">
 							<int key="NSColorSpace">3</int>
@@ -71,7 +72,7 @@
 					<object class="IBUITableView" id="381758895">
 						<reference key="NSNextResponder" ref="1009307457"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{21, 59}, {222, 210}}</string>
+						<string key="NSFrame">{{21, 66}, {222, 210}}</string>
 						<reference key="NSSuperview" ref="1009307457"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -88,9 +89,10 @@
 					<object class="IBUIButton" id="298656072">
 						<reference key="NSNextResponder" ref="1009307457"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{237, 0}, {25, 25}}</string>
+						<string key="NSFrame">{{237, -2}, {25, 25}}</string>
 						<reference key="NSSuperview" ref="1009307457"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="381758895"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -123,8 +125,23 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
+					<object class="IBUIPageControl" id="501979713">
+						<reference key="NSNextResponder" ref="1009307457"/>
+						<int key="NSvFlags">1316</int>
+						<object class="NSPSMatrix" key="NSFrameMatrix"/>
+						<string key="NSFrame">{{112, 1}, {38, 36}}</string>
+						<reference key="NSSuperview" ref="1009307457"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="298656072"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<int key="IBUINumberOfPages">3</int>
+					</object>
 				</array>
-				<string key="NSFrameSize">{262, 276}</string>
+				<string key="NSFrameSize">{262, 283}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="60567703"/>
@@ -158,6 +175,14 @@
 						<reference key="destination" ref="381758895"/>
 					</object>
 					<int key="connectionID">11</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">pageController</string>
+						<reference key="source" ref="1009307457"/>
+						<reference key="destination" ref="501979713"/>
+					</object>
+					<int key="connectionID">19</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -220,6 +245,7 @@
 							<reference ref="381758895"/>
 							<reference ref="60567703"/>
 							<reference ref="298656072"/>
+							<reference ref="501979713"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -244,6 +270,11 @@
 						<reference key="object" ref="298656072"/>
 						<reference key="parent" ref="1009307457"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">17</int>
+						<reference key="object" ref="501979713"/>
+						<reference key="parent" ref="1009307457"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -252,6 +283,7 @@
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="15.CustomClassName">FontButton</string>
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.CustomClassName">ChatView</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -262,7 +294,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">16</int>
+			<int key="maxID">19</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -273,6 +305,7 @@
 						<string key="bgImageView">UIImageView</string>
 						<string key="expressionsHolderView">UIScrollView</string>
 						<string key="messagesHolderView">UITableView</string>
+						<string key="pageController">UIPageControl</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="bgImageView">
@@ -286,6 +319,10 @@
 						<object class="IBToOneOutletInfo" key="messagesHolderView">
 							<string key="name">messagesHolderView</string>
 							<string key="candidateClassName">UITableView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="pageController">
+							<string key="name">pageController</string>
+							<string key="candidateClassName">UIPageControl</string>
 						</object>
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
