--- a/Draw/Dice/View/DiceSettingView/DiceSettingView~ipad.xib
+++ b/Draw/Dice/View/DiceSettingView/DiceSettingView~ipad.xib
@@ -41,7 +41,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{768, 1024}</string>
 						<reference key="NSSuperview" ref="84930225"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="508497296"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="972111789">
@@ -60,7 +59,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{0, 12}, {468, 274}}</string>
 								<reference key="NSSuperview" ref="508497296"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1002384597"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="355140580">
@@ -75,7 +73,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{165, 61}, {115, 59}}</string>
 								<reference key="NSSuperview" ref="508497296"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="913161315"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="355140580"/>
@@ -117,7 +114,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{165, 176}, {115, 59}}</string>
 								<reference key="NSSuperview" ref="508497296"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="965759838"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="355140580"/>
@@ -140,7 +136,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{38, 169}, {80, 74}}</string>
 								<reference key="NSSuperview" ref="508497296"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="957507765"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="355140580"/>
@@ -156,7 +151,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{38, 54}, {80, 74}}</string>
 								<reference key="NSSuperview" ref="508497296"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="86814219"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="355140580"/>
@@ -172,7 +166,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{279, 176}, {115, 59}}</string>
 								<reference key="NSSuperview" ref="508497296"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="355140580"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -200,7 +193,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{279, 61}, {115, 59}}</string>
 								<reference key="NSSuperview" ref="508497296"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="918709087"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="355140580"/>
@@ -223,7 +215,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{441, -1}, {54, 54}}</string>
 								<reference key="NSSuperview" ref="508497296"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="822624363"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="355140580"/>
@@ -231,7 +222,6 @@
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
-								<string key="IBUINormalTitle">X</string>
 								<reference key="IBUIHighlightedTitleColor" ref="606137313"/>
 								<object class="NSColor" key="IBUINormalTitleColor">
 									<int key="NSColorSpace">1</int>
@@ -240,7 +230,7 @@
 								<reference key="IBUINormalTitleShadowColor" ref="564934272"/>
 								<object class="NSCustomResource" key="IBUINormalBackgroundImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">dice_close_btn@2x.png</string>
+									<string key="NSResourceName">clean_input@2x.png</string>
 								</object>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">2</int>
@@ -255,7 +245,6 @@
 						</array>
 						<string key="NSFrame">{{137, 355}, {494, 314}}</string>
 						<reference key="NSSuperview" ref="84930225"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="652862124"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="355140580"/>
@@ -265,7 +254,6 @@
 				</array>
 				<string key="NSFrameSize">{768, 1024}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="481231096"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="355140580"/>
@@ -514,97 +502,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">38</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CommonInfoView</string>
-					<string key="superclassName">UIView</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">contentView</string>
-						<string key="NS.object.0">UIView</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">contentView</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">contentView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CommonInfoView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">DiceSettingView</string>
-					<string key="superclassName">CommonInfoView</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="audioImageView">UIImageView</string>
-						<string key="audioOffButton">FontButton</string>
-						<string key="audioOnButton">FontButton</string>
-						<string key="bgImageView">UIImageView</string>
-						<string key="closeButton">FontButton</string>
-						<string key="musicImageView">UIImageView</string>
-						<string key="musicOffButton">FontButton</string>
-						<string key="musicOnButton">FontButton</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="audioImageView">
-							<string key="name">audioImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="audioOffButton">
-							<string key="name">audioOffButton</string>
-							<string key="candidateClassName">FontButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="audioOnButton">
-							<string key="name">audioOnButton</string>
-							<string key="candidateClassName">FontButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bgImageView">
-							<string key="name">bgImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="closeButton">
-							<string key="name">closeButton</string>
-							<string key="candidateClassName">FontButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="musicImageView">
-							<string key="name">musicImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="musicOffButton">
-							<string key="name">musicOffButton</string>
-							<string key="candidateClassName">FontButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="musicOnButton">
-							<string key="name">musicOnButton</string>
-							<string key="candidateClassName">FontButton</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/DiceSettingView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">FontButton</string>
-					<string key="superclassName">UIGlossyButton</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FontButton.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">UIGlossyButton</string>
-					<string key="superclassName">UIButton</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/UIGlossyButton.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
@@ -615,7 +513,7 @@
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="audio_on@2x.png">{81, 75}</string>
-			<string key="dice_close_btn@2x.png">{63, 63}</string>
+			<string key="clean_input@2x.png">{57, 57}</string>
 			<string key="music_on@2x.png">{81, 75}</string>
 			<string key="settingleft_selected@2x.png">{115, 59}</string>
 			<string key="settingleft_unselect@2x.png">{115, 59}</string>
