--- a/Draw/Dice/View/PopupView/ChatView~ipad.xib
+++ b/Draw/Dice/View/PopupView/ChatView~ipad.xib
@@ -97,7 +97,6 @@
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
-						<string key="IBUINormalTitle">X</string>
 						<object class="NSColor" key="IBUIHighlightedTitleColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
@@ -112,7 +111,7 @@
 						</object>
 						<object class="NSCustomResource" key="IBUINormalBackgroundImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">dice_close_btn@2x.png</string>
+							<string key="NSResourceName">clean_input@2x.png</string>
 						</object>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">2</int>
@@ -273,6 +272,7 @@
 						<string key="bgImageView">UIImageView</string>
 						<string key="expressionsHolderView">UIScrollView</string>
 						<string key="messagesHolderView">UITableView</string>
+						<string key="pageController">UIPageControl</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="bgImageView">
@@ -286,6 +286,10 @@
 						<object class="IBToOneOutletInfo" key="messagesHolderView">
 							<string key="name">messagesHolderView</string>
 							<string key="candidateClassName">UITableView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="pageController">
+							<string key="name">pageController</string>
+							<string key="candidateClassName">UIPageControl</string>
 						</object>
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -320,8 +324,8 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="NS.key.0">dice_close_btn@2x.png</string>
-			<string key="NS.object.0">{63, 63}</string>
+			<string key="NS.key.0">clean_input@2x.png</string>
+			<string key="NS.object.0">{57, 57}</string>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">1181</string>
 	</data>
